--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/tailwind": "^5.1.4",
     "@astrojs/vercel": "^8.0.1",
+    "@astrojs/vue": "^5.0.4",
     "astro": "^5.1.2",
     "firebase": "^11.1.0",
-    "firebase-admin": "^13.0.2"
+    "firebase-admin": "^13.0.2",
+    "tailwindcss": "^3.4.17"
   }
 }
