--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/vercel": "^8.0.1",
     "@astrojs/vue": "^5.0.4",
     "astro": "^5.1.2",
+    "astro-icon": "^1.1.5",
     "firebase": "^11.1.0",
     "firebase-admin": "^13.0.2",
     "tailwindcss": "^3.4.17"
