--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "firebase-auth",
+  "name": "porfolio",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -9,13 +9,20 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.2.1",
     "@astrojs/tailwind": "^5.1.4",
     "@astrojs/vercel": "^8.0.1",
     "@astrojs/vue": "^5.0.4",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "animate.css": "^4.1.1",
     "astro": "^5.1.2",
     "astro-icon": "^1.1.5",
     "firebase": "^11.1.0",
     "firebase-admin": "^13.0.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "sharp": "^0.33.5",
     "tailwindcss": "^3.4.17"
   }
 }
